# Rubrica

./: .gitignore  CMakeLists.txt  Makefile  README.md  contatti.csv  main.cpp
data/: rubrica.csv
include/: contatto.hpp  list.hpp  rubrica.hpp  utils.hpp
src/: contatto.cpp  list.cpp  rubrica.cpp  utils.cpp
src/include/: contatto.hpp  list.hpp  rubrica.hpp  utils.hpp
